--- a/ProgramacionNCapas/ProgramacionNCapas.csproj
+++ b/ProgramacionNCapas/ProgramacionNCapas.csproj
@@ -127,11 +127,23 @@
     <Compile Include="RegistroPasante.Designer.cs">
       <DependentUpon>RegistroPasante.cs</DependentUpon>
     </Compile>
+    <Compile Include="Report1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Report1.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Reporte.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Reporte.Designer.cs">
       <DependentUpon>Reporte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ReportePasantes.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ReportePasantes.rpt</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="VentanaEstadoPasante.cs">
       <SubType>Form</SubType>
@@ -144,6 +156,12 @@
     </Compile>
     <Compile Include="VentanaReporte.Designer.cs">
       <DependentUpon>VentanaReporte.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VisorReporte.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VisorReporte.Designer.cs">
+      <DependentUpon>VisorReporte.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="controlPasante.resx">
       <DependentUpon>controlPasante.cs</DependentUpon>
@@ -185,14 +203,25 @@
     <EmbeddedResource Include="RegistroPasante.resx">
       <DependentUpon>RegistroPasante.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Report1.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>Report1.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Reporte.resx">
       <DependentUpon>Reporte.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ReportePasantes.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>ReportePasantes.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="VentanaEstadoPasante.resx">
       <DependentUpon>VentanaEstadoPasante.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VentanaReporte.resx">
       <DependentUpon>VentanaReporte.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VisorReporte.resx">
+      <DependentUpon>VisorReporte.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="login.config" />
     <None Include="Properties\Settings.settings">
